# Calorie

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README.md  build_and_run_local.sh
data/: calorie.desktop
po/: CMakeLists.txt
src/: .Application.vala.swn  .Application.vala.swo  .Application.vala.swp  .DB.vala.swp  .Database.vala.swp  .Utils.vala.swp  Application.vala  Database.vala  Utils.vala
src/Model/: .Entry.vala.swn  .Entry.vala.swo  .Entry.vala.swp  .Food.vala.swp  .Meal.vala.swo  .Meal.vala.swp  Entry.vala  Food.vala  Meal.vala
src/UI/: .ApplicationMenu.vala.swp  .DiaryView.vala.swo  .DiaryView.vala.swp  .EntryView.vala.swo  .EntryView.vala.swp  .MealView.vala.swo  .MealView.vala.swp  .Menu.vala.swp  .Toolbar.vala.swo  .Toolbar.vala.swp  ApplicationMenu.vala  DiaryView.vala  EntryContextMenu.vala  EntryView.vala  MealView.vala  SummaryView.vala  Toolbar.vala
src/UI/Dialogs/: .AddFoodDialog.vala.swp  .ConfigureMealNamesDialog.vala.swp  AddFoodDialog.vala  ConfigureMealNamesDialog.vala
src/UI/Widgets/: .DatePicker.vala.swp  .DatePickerWithButtons.vala.swo  .DatePickerWithButtons.vala.swp  DatePicker.vala  DatePickerWithButtons.vala
